fixed search on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,8 @@
 
 .search-toggle {
   position: absolute;
-  right: 0;
+  right: 50%;
+  transform: translateX(50%);
   background-image: url('./assets/search.svg');
 }
 
@@ -59,7 +60,7 @@
   padding: .5em 2.3em .5em;
   border-radius: .35rem;
   border: 1.5px solid #000;
-  transform-origin: right;
+  transform-origin: center;
   scale: 0 1;
   opacity: 0;
 }
@@ -78,11 +79,12 @@
 
 @keyframes moveToggleLeft {
   0% {
-    right: 0;
+    right: 50%;
   }
 
   100% {
     right: 145px;
+    transform: translateX(0);
   }
 }
 
@@ -92,8 +94,43 @@
   }
 
   100% {
+    right: 50%;
+    transform: translateX(50%);
+  }
+}
+
+@media(min-width: 40em) {
+  .search-input {
+    transform-origin: right;
+  }
+
+  .search-toggle {
     right: 0;
   }
+
+  @keyframes moveToggleLeft {
+    0% {
+      right: 0;
+      transform: translateX(50%);
+    }
+
+    100% {
+      right: 145px;
+      transform: translateX(0);
+
+    }
+  }
+
+  @keyframes moveToggleRight {
+    0% {
+      right: 145px;
+    }
+
+    100% {
+      right: 0;
+    }
+  }
+
 }
 
 .search-input.open {
@@ -106,7 +143,7 @@
   background-image: url('./assets/menu.svg');
 }
 
-@media(max-width: 35em) {
+@media(max-width: 40em) {
   .primary-nav {
     padding: 2em 1em;
     position: absolute;
@@ -129,13 +166,13 @@
   }
 }
 
-@media(min-width: 35em) {
+@media(min-width: 40em) {
   .nav-toggle {
     display: none;
   }
 }
 
-@media(min-width: 35em) {
+@media(min-width: 40em) {
   .primary-nav {
     display: flex;
     align-items: center;
